--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.2",
+    "react-markdown": "^3.1.3",
     "redux": "^3.7.2",
     "socket.io": "^2.0.4"
   },
